# kfilebox

./: .gitignore  CMakeLists.txt  DropboxIcons.qrc  README  dropboxclientadaptor.h  installer.ui  kfilebox.desktop  kfilebox.notifyrc  kfilebox.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: DaemonConnection.cpp  DaemonConnection.h  DropboxClient.cpp  DropboxClient.h  dolphin.cpp  dolphin.h  filebrowser.cpp  filebrowser.h  konqueror.cpp  konqueror.h  notification.cpp  notification.h  trayicon.cpp  trayicon.h
debian/: changelog  control  copyright  files  install  rules
icons/: CMakeLists.txt
installer/: Daemoninstaller.cpp  Daemoninstaller.h  installerform.cpp  installerform.h  installerform.ui
locale/: CMakeLists.txt
locale/ar/: kfilebox.mo
locale/br/: kfilebox.mo  kfilebox.po
locale/cs/: kfilebox.mo  kfilebox.po
locale/de/: kfilebox.mo
locale/el/: kfilebox.mo  kfilebox.po
locale/en/: kfilebox.mo  kfilebox.po
locale/es/: kfilebox.mo
locale/fr/: kfilebox.mo  kfilebox.po
locale/gl/: kfilebox.mo  kfilebox.po
locale/it/: kfilebox.mo  kfilebox.po
locale/lt/: kfilebox.mo
locale/nl/: kfilebox.mo
locale/pl/: kfilebox.mo  kfilebox.po
locale/ru/: kfilebox.mo  kfilebox.po
locale/si/: kfilebox.mo
locale/tr/: kfilebox.mo
locale/tw/: kfilebox.mo  kfilebox.po
locale/zh/: kfilebox.mo
model/: Configuration.cpp  Configuration.h  FileJournal.cpp  FileJournal.h  configurationdbdriver.cpp  configurationdbdriver.h
po/: CMakeLists.txt  ar.po  de.po  es.po  lt.po  nl.po  pt.po  si.po  tr.po  zh.po
src/: configuration.cpp  configuration.h  configurationdbdriver.cpp  configurationdbdriver.h  dropboxclient.cpp  dropboxclient.h  dropboxclientadaptor.cpp  dropboxclientadaptor.h  installerform.cpp  installerform.h  installerform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  notification.cpp  notification.h  trayicon.cpp  trayicon.h
util/: Downloader.cpp  Downloader.h  SystemCall.cpp  SystemCall.h
